--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
-<!DOCTYPE html>
-	<html lang="ESPANOL">
-	<head>
-		<title>seguridad informática</title>
-		<meta charset="UTF-8"/>
-		<meta description="Seguridad Informática, Algunas clases de virus"/>
-    <link rel="stylesheet" href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\css\normalize.css">
-		<link rel="stylesheet" href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\css\estilo.css">
-		<script type="text/javascript" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\js\modernizr-custom.js">
-					</script>
-	</head>
-	<body>
-		<h1>seguridad informática</h1>
-		<div id="wrapper">
-		<section id="primero">Es una forma de conocer los ataques que se implementan hoy día, en cada uno de los pc vulnerables que no están protegidos por algún antivirus correctamente, Los ataques más utilizados en contra de un sistema informático son los troyanos, los gusanos y la suplantación y espionaje a través de redes sociales. A menudo algunos usuarios autorizados pueden también estar directamente involucrados en el robo de datos o en su mal uso.  Pero si se toman las medidas adecuadas, la gran mayoría de este tipo de ataques pueden prevenirse, para ello en esta sección le mostraremos algunas clases de virus y tipos de antivirus que podrás utilizar.
-		</section>
+<meta charset="UTF-8"/>
+<meta description="Seguridad Informática, Algunas clases de virus"/>
+<link rel="stylesheet" href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\css\normalize.css">
+<link rel="stylesheet" href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\css\estilo.css">
+<script type="text/javascript" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\js\modernizr-custom.js">
+			</script>
+</head>
+<body style="background-color:#84D1D5;">
+<h1 style="color:#FFFF">seguridad informática</h1>
+<!--<div id="wrapper">
+<section id="primero">Es una forma de conocer los ataques que se implementan hoy día, en cada uno de los pc vulnerables que no están protegidos por algún antivirus correctamente, Los ataques más utilizados en contra de un sistema informático son los troyanos, los gusanos y la suplantación y espionaje a través de redes sociales. A menudo algunos usuarios autorizados pueden también estar directamente involucrados en el robo de datos o en su mal uso.  Pero si se toman las medidas adecuadas, la gran mayoría de este tipo de ataques pueden prevenirse, para ello en esta sección le mostraremos algunas clases de virus y tipos de antivirus que podrás utilizar.
+</section>
 
-		<section>
-			<img src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\imagen1.jpg" alt="">
-		</section>
-		<h2>Algunas clases de virus</h2>
-		</div>
-		
-	</body>
-	</html>
+
+</div>-->
+<p style="color:#FFFF">Es una forma de conocer los ataques que se implementan hoy día, en cada uno de los pc vulnerables que no están protegidos por algún antivirus correctamente, Los ataques más utilizados en contra de un sistema informático son los troyanos, los gusanos y la suplantación y espionaje a través de redes sociales. A menudo algunos usuarios autorizados pueden también estar directamente involucrados en el robo de datos o en su mal uso.  Pero si se toman las medidas adecuadas, la gran mayoría de este tipo de ataques pueden prevenirse, para ello en esta sección le mostraremos algunas clases de virus y tipos de antivirus que podrás utilizar.</p>
+<section>
+	<img id="imgane1" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\imagen1.jpg" alt="">
+</section>
+<h2>VIDEOS</h2>
+<a href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\contenido\multimedia\video1.html"><img id="ivideo1" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\video1.jpg" alt=""></a>
+<a href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\contenido\multimedia\video2.html"><img id="ivideo2" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\video2.jpg" alt=""></a>
+<ul style="color:#FFFF">
+	<li>
+		<a style="color:#FFFF" href="virus.html">Algunas clases de virus</a>
+	</li>
+	<li>
+		<a style="color:#FFFF" href="antivirus.html">Clases de Antivirus</a>
+	</li>
+	<li>
+		<a style="color:#FFFF" href="recomendaciones.html">Recomendaciones</a>
+	</li>
+	<li>
+		<a style="color:#FFFF" href="rvideo1.html">Recomendaciones</a>
+	</li>
+</ul>
+</body>
+</html>
