--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<meta charset="UTF-8"/>
+﻿<meta charset="UTF-8"/>
 <meta description="Seguridad Informática, Algunas clases de virus"/>
-<link rel="stylesheet" href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\css\normalize.css">
-<link rel="stylesheet" href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\css\estilo.css">
-<script type="text/javascript" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\js\modernizr-custom.js">
+<link rel="stylesheet" href="css\normalize.css">
+<link rel="stylesheet" href="css\estilo.css">
+<script type="text/javascript" src="modernizr-custom.js">
 			</script>
 </head>
 <body style="background-color:#84D1D5;">
@@ -15,11 +15,11 @@
 </div>-->
 <p style="color:#FFFF">Es una forma de conocer los ataques que se implementan hoy día, en cada uno de los pc vulnerables que no están protegidos por algún antivirus correctamente, Los ataques más utilizados en contra de un sistema informático son los troyanos, los gusanos y la suplantación y espionaje a través de redes sociales. A menudo algunos usuarios autorizados pueden también estar directamente involucrados en el robo de datos o en su mal uso.  Pero si se toman las medidas adecuadas, la gran mayoría de este tipo de ataques pueden prevenirse, para ello en esta sección le mostraremos algunas clases de virus y tipos de antivirus que podrás utilizar.</p>
 <section>
-	<img id="imgane1" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\imagen1.jpg" alt="">
+	<img id="imgane1" src="img\imagen1.jpg" alt="">
 </section>
 <h2>VIDEOS</h2>
-<a href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\contenido\multimedia\video1.html"><img id="ivideo1" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\video1.jpg" alt=""></a>
-<a href="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\contenido\multimedia\video2.html"><img id="ivideo2" src="C:\Users\ESPAN\Documents\GitHub\Fase 3 Construcción\img\video2.jpg" alt=""></a>
+<a href="multimedia\video1.html"><img id="ivideo1" src="img\video1.jpg" alt=""></a>
+<a href="multimedia\video2.html"><img id="ivideo2" src="img\video2.jpg" alt=""></a>
 <ul style="color:#FFFF">
 	<li>
 		<a style="color:#FFFF" href="virus.html">Algunas clases de virus</a>
